tests/multiubuntu/test-cases/TC_30/TC_30_ingress_selector_aggregator_matchLabels_toPorts_commonLabel.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      common: commonselector
  ingress:
  - fromEndpoints:
    - matchLabels:
        common: commonselector
        container: ubuntu-4
        group: group-2
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
